# vscpl2drv-websocksrv

./: .gitmodules  CHANGELOG  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml  cmake_cross_platform_build.yml
debug/: conf_standard.json
debug/certs/: cert.pem  key.pem
debug/linux/: vscpd.json  websocksrv.json
debug/www/: index.html
docs/: README.md  _sidebar.md  debugging.md  hardware.md  index.html  replacing-the-firmware.md  self_signed_server_certificates.md  variables.xml
man/: .gitignore  CMakeLists.txt  make_man_pages  vscpl2drv-websocksrv.1.md
resources/: conf_standard.json  vscpl2drv-websocksrv.conf
resources/linux/: websocksrv.json
src/: srv.cpp  srv.h  tcpipsrv.cpp  tcpipsrv.h  version.h  vscp-websocket.h  vscpl2drv-tcpipsrv.cpp  vscpl2drv-websocksrv.cpp  vscpl2drv-websocksrv.h  websocketsrv.cpp  websocketsrv.h  websocksrv.cpp  websocksrv.h
test/: .gitignore  .test_ws1.py.swp  CMakeLists.txt  README.md  sender.c  test_ws1.c  test_ws1.html  test_ws1.js  test_ws1.py  test_ws2.c  test_ws2.html  test_ws2.js  test_ws2.py
testapp/: CMakeLists.txt  main.cpp
ttt/: tcpsrv.cpp  tcptslsrv.c  tslsrv.txt
web/: test.html
